--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/shop-app
+spring.datasource.url=jdbc:postgresql://localhost:5432/gb-shop
 spring.datasource.username=postgres
 spring.datasource.password=postgrespass
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/simple-app
-spring.flyway.schemas=public
+spring.flyway.url=jdbc:postgresql://localhost:5432/gb-shop
+spring.flyway.schemas=shop
 spring.flyway.user=postgres
 spring.flyway.password=postgrespass
