Add Product Controller, Service, Repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/gb-shop
 spring.flyway.schemas=shop
 spring.flyway.user=postgres
 spring.flyway.password=postgrespass
+
+upload.path="/Users/duckpool/dev/courses/Geekbrains/gb-shop/upload"
