--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.properties.hibernate.default_schema=shop
+#Flyway
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/gb-shop
 spring.flyway.schemas=shop
 spring.flyway.user=postgres
 spring.flyway.password=postgrespass
-
-upload.path="/Users/duckpool/dev/courses/Geekbrains/gb-shop/upload"
