Implement pagination on Product list page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/gb-shop
 spring.flyway.schemas=shop
 spring.flyway.user=postgres
 spring.flyway.password=postgrespass
+#MultipartFile
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
